--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -43,6 +43,7 @@ if(BUILD_TUTORIAL STREQUAL "all")
     add_tutorial_target(tutorial1_display src/tutorial1_display.cpp)
     add_tutorial_target(tutorial2_control_camera src/tutorial2_control_camera.cpp)
     add_tutorial_target(tutorial3_getting_frame_count src/tutorial3_getting_frame_count.cpp)
+    add_tutorial_target(tutorial4_save_data src/tutorial4_save_data.cpp)
     message(STATUS "All tutorials are ready to build.")
 else()
     foreach(TUTORIAL ${BUILD_TUTORIAL})
