--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -8,8 +8,6 @@ if(NOT OpenCV_DIR)
     set(OpenCV_DIR $ENV{SENSING_DEV_ROOT}/opencv/build)
 endif()
 
-find_package(OpenCV REQUIRED PATHS ${OpenCV_DIR})
-
 # header files
 include_directories(${SENSING_DEV_DIR}/include)
 include_directories(${SENSING_DEV_DIR}/include/aravis-0.8)
@@ -29,7 +27,12 @@ function(add_tutorial_target TUTORIAL_NAME SOURCE_FILE)
     if (TUTORIAL_NAME STREQUAL "tutorial0_get_device_info" OR TUTORIAL_NAME STREQUAL "tutorial0_set_device_info")
         target_link_libraries(${TUTORIAL_NAME} PRIVATE aravis-0.8.lib)
         target_link_libraries(${TUTORIAL_NAME} PRIVATE gobject-2.0.lib)
+    elseif (TUTORIAL_NAME STREQUAL "tutorial4_save_data")
+        target_link_libraries(${TUTORIAL_NAME} PRIVATE ion-core.lib)
+        target_link_libraries(${TUTORIAL_NAME} PRIVATE halide.lib)
+    elseif (TUTORIAL_NAME STREQUAL "tutorial5_parse_gendc_data")
     else()
+        find_package(OpenCV REQUIRED PATHS ${OpenCV_DIR})
         target_link_libraries(${TUTORIAL_NAME} PRIVATE ${OpenCV_LIBS})
         target_link_libraries(${TUTORIAL_NAME} PRIVATE ion-core.lib)
         target_link_libraries(${TUTORIAL_NAME} PRIVATE halide.lib)
@@ -44,6 +47,7 @@ if(BUILD_TUTORIAL STREQUAL "all")
     add_tutorial_target(tutorial2_control_camera src/tutorial2_control_camera.cpp)
     add_tutorial_target(tutorial3_getting_frame_count src/tutorial3_getting_frame_count.cpp)
     add_tutorial_target(tutorial4_save_data src/tutorial4_save_data.cpp)
+    add_tutorial_target(tutorial5_parse_gendc_data src/tutorial5_parse_gendc_data.cpp)
     message(STATUS "All tutorials are ready to build.")
 else()
     foreach(TUTORIAL ${BUILD_TUTORIAL})
