--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -27,7 +27,7 @@ function(add_tutorial_target TUTORIAL_NAME SOURCE_FILE)
     if (TUTORIAL_NAME STREQUAL "tutorial0_get_device_info" OR TUTORIAL_NAME STREQUAL "tutorial0_set_device_info")
         target_link_libraries(${TUTORIAL_NAME} PRIVATE aravis-0.8.lib)
         target_link_libraries(${TUTORIAL_NAME} PRIVATE gobject-2.0.lib)
-    elseif (TUTORIAL_NAME STREQUAL "tutorial4_save_data")
+    elseif (TUTORIAL_NAME STREQUAL "tutorial4_save_gendc_data" OR TUTORIAL_NAME STREQUAL "tutorial4_save_image_bin_data")
         target_link_libraries(${TUTORIAL_NAME} PRIVATE ion-core.lib)
         target_link_libraries(${TUTORIAL_NAME} PRIVATE halide.lib)
     else()
