--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -45,7 +45,8 @@ if(BUILD_TUTORIAL STREQUAL "all")
     add_tutorial_target(tutorial1_display src/tutorial1_display.cpp)
     add_tutorial_target(tutorial2_control_camera src/tutorial2_control_camera.cpp)
     add_tutorial_target(tutorial3_getting_frame_count src/tutorial3_getting_frame_count.cpp)
-    add_tutorial_target(tutorial4_save_data src/tutorial4_save_data.cpp)
+    add_tutorial_target(tutorial4_save_gendc_data src/tutorial4_save_gendc_data.cpp)
+    add_tutorial_target(tutorial4_save_image_bin_data src/tutorial4_save_image_bin_data.cpp)
     add_tutorial_target(tutorial5_parse_gendc_data src/tutorial5_parse_gendc_data.cpp)
     message(STATUS "All tutorials are ready to build.")
 else()
