--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,9 +11,10 @@ jobs:
     env: 
       LD_LIBRARY_PATH: /opt/sensing-dev/lib:/opt/sensing-dev/lib/x86_64-linux-gnu
       SDK_VERSION: v24.05.05
+      LATEST_OPENCV_VERSION: 4.10.0
     strategy:
         matrix:
-          os: [ubuntu-22.04, windows-2019, windows-latest]
+          os: [ubuntu-22.04, windows-2019, windows-2022]
           tutorial_file_name: [tutorial0_get_device_info, tutorial0_set_device_info, tutorial1_display, tutorial2_control_camera, tutorial3_getting_frame_count, tutorial4_save_data, tutorial5_parse_gendc_data]
       
     steps:
@@ -55,13 +56,16 @@ jobs:
           powershell.exe -ExecutionPolicy Bypass -File ./installer.ps1 -user $env:USERNAME -version ${{ env.SDK_VERSION }} -InstallOpenCV
           echo 'SENSING_DEV_ROOT=$env:SENSING_DEV_ROOT' >> $GITHUB_ENV
 
-      - name: Install sensing-dev SDK on Windows MSVC 2019
+      - name: Install sensing-dev SDK on Windows MSVC 2022
         if: matrix.os == 'windows-2022'
         run: |
           mkdir setup_dir && cd setup_dir
           Invoke-WebRequest -Uri https://github.com/Sensing-Dev/sensing-dev-installer/releases/download/${{ env.SDK_VERSION }}/installer.ps1 -OutFile installer.ps1 -Verbose
-          powershell.exe -ExecutionPolicy Bypass -File ./installer.ps1 -user $env:USERNAME -version ${{ env.SDK_VERSION }} -InstallOpenCV
+          powershell.exe -ExecutionPolicy Bypass -File ./installer.ps1 -user $env:USERNAME -version ${{ env.SDK_VERSION }}
           echo 'SENSING_DEV_ROOT=$env:SENSING_DEV_ROOT' >> $GITHUB_ENV
+          Invoke-WebRequest -Uri https://github.com/opencv/opencv/releases/download/${{ env.LATEST_OPENCV_VERSION }}/opencv-${{ env.LATEST_OPENCV_VERSION }}-windows.exe -OutFile opencv-${{ env.LATEST_OPENCV_VERSION }}-windows.exe 
+          $targetDir =  $env:SENSING_DEV_ROOT
+          Start-Process -FilePath opencv-${{ env.LATEST_OPENCV_VERSION }}-windows.exe -ArgumentList "-o`"$targetDir`" -y" -Wait
 
       - name: Check if ${{ matrix.tutorial_file_name }} exists on Windows
         if: ${{ (matrix.os == 'windows-2019') && (matrix.os == 'windows-2022') }}
