WIP: install OpenCV separately

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,12 +63,16 @@ jobs:
           Invoke-WebRequest -Uri https://github.com/Sensing-Dev/sensing-dev-installer/releases/download/${{ env.SDK_VERSION }}/installer.ps1 -OutFile installer.ps1 -Verbose
           powershell.exe -ExecutionPolicy Bypass -File ./installer.ps1 -user $env:USERNAME -version ${{ env.SDK_VERSION }}
           echo 'SENSING_DEV_ROOT=$env:SENSING_DEV_ROOT' >> $GITHUB_ENV
+
+      - name: Install OpenCV separately on Windows MSVC 2022
+        if: matrix.os == 'windows-2022'
+        run: | 
+          $targetDir= [Environment]::GetEnvironmentVariable("SENSING_DEV_ROOT", "User")
           Invoke-WebRequest -Uri https://github.com/opencv/opencv/releases/download/${{ env.LATEST_OPENCV_VERSION }}/opencv-${{ env.LATEST_OPENCV_VERSION }}-windows.exe -OutFile opencv-${{ env.LATEST_OPENCV_VERSION }}-windows.exe 
-          $targetDir =  $env:SENSING_DEV_ROOT
           Start-Process -FilePath opencv-${{ env.LATEST_OPENCV_VERSION }}-windows.exe -ArgumentList "-o`"$targetDir`" -y" -Wait
 
       - name: Check if ${{ matrix.tutorial_file_name }} exists on Windows
-        if: ${{ (matrix.os == 'windows-2019') && (matrix.os == 'windows-2022') }}
+        if: ${{ (matrix.os == 'windows-2019') || (matrix.os == 'windows-2022') }}
         id: check_file
         run: |
           $filePath = "${env:LOCALAPPDATA}\sensing-dev\opencv"
