--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
           Invoke-WebRequest -Uri https://github.com/opencv/opencv/releases/download/${{ env.LATEST_OPENCV_VERSION }}/opencv-${{ env.LATEST_OPENCV_VERSION }}-windows.exe -OutFile opencv-${{ env.LATEST_OPENCV_VERSION }}-windows.exe 
           Start-Process -FilePath opencv-${{ env.LATEST_OPENCV_VERSION }}-windows.exe -ArgumentList "-o`"$targetDir`" -y" -Wait
 
-      - name: Check if ${{ matrix.tutorial_file_name }} exists on Windows
+      - name: Check if OpenCV exists on Windows
         if: ${{ (matrix.os == 'windows-2019') || (matrix.os == 'windows-2022') }}
         id: check_file
         run: |
@@ -86,7 +86,7 @@ jobs:
           }
 
       - name: Build ${{ matrix.tutorial_file_name}} on Windows
-        if: matrix.os == 'windows-2019'
+        if: ${{ (matrix.os == 'windows-2019') || (matrix.os == 'windows-2022') }}
         run: |
           $PATH =  [Environment]::GetEnvironmentVariable("PATH", "User")
           Write-Host PATH = $PATH
