--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
         matrix:
           os: [ubuntu-22.04, windows-2019, windows-2022]
           tutorial_file_name: [tutorial0_get_device_info, tutorial0_set_device_info, tutorial1_display, tutorial2_control_camera, tutorial3_getting_frame_count, tutorial4_save_gendc_data, tutorial4_save_image_bin_data, tutorial5_parse_gendc_data, tutorial5_parse_image_bin_data]
-      
+          test_file_name: [fake_camera_display]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
@@ -40,6 +40,14 @@ jobs:
           python_output=$(python ${GITHUB_WORKSPACE}/.github/get_compile_command.py src/${{ matrix.tutorial_file_name}}.cpp)
           echo "Python script output: $python_output"
           eval "$python_output"
+
+      - name: Build ${{ matrix.tutorial_file_name}} with GCC
+        if: matrix.os == 'ubuntu-22.04'
+        run: |
+          python_output=$(python ${GITHUB_WORKSPACE}/.github/get_compile_command.py ${GITHUB_WORKSPACE}/test/cpp/src/${{ matrix.test_file_name}}.cpp)
+          echo "Python script output: $python_output"
+          eval "$python_output"
+          ./${{ matrix.test_file_name}}
 
       - name: Check if ${{ matrix.tutorial_file_name }} exists on Ubuntu 22.04
         if: matrix.os == 'ubuntu-22.04'
