--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,6 +37,7 @@ jobs:
       - name: Build ${{ matrix.test_file_name}} with GCC
         if: matrix.os == 'ubuntu-22.04'
         run: |
+          cd  ${GITHUB_WORKSPACE}/test/cpp
           python_output=$(python ${GITHUB_WORKSPACE}/.github/get_compile_command.py ${GITHUB_WORKSPACE}/test/cpp/src/${{ matrix.test_file_name}}.cpp)
           echo "Python script output: $python_output"
           eval "$python_output"
@@ -45,7 +46,7 @@ jobs:
       - name: Build ${{ matrix.tutorial_file_name}} with GCC
         if: matrix.os == 'ubuntu-22.04'
         run: |
-          cd cpp
+          cd  ${GITHUB_WORKSPACE}/cpp
           python_output=$(python ${GITHUB_WORKSPACE}/.github/get_compile_command.py src/${{ matrix.tutorial_file_name}}.cpp)
           echo "Python script output: $python_output"
           eval "$python_output"
