--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,9 @@ jobs:
       LATEST_OPENCV_VERSION: 4.10.0
     strategy:
         matrix:
-#          os: [ubuntu-22.04, windows-2019, windows-2022]
-          os: [windows-2019]
-#          tutorial_file_name: [tutorial0_get_device_info, tutorial0_set_device_info, tutorial1_display, tutorial2_control_camera, tutorial3_getting_frame_count, tutorial4_save_gendc_data, tutorial4_save_image_bin_data, tutorial5_parse_gendc_data, tutorial5_parse_image_bin_data]
-          tutorial_file_name: [tutorial0_get_device_info]
-          test_file_name: [fake_camera_display]
+          os: [ubuntu-22.04, windows-2019, windows-2022]
+          tutorial_file_name: [tutorial0_get_device_info, tutorial0_set_device_info, tutorial1_display, tutorial2_control_camera, tutorial3_getting_frame_count, tutorial4_save_gendc_data, tutorial4_save_image_bin_data, tutorial5_parse_gendc_data, tutorial5_parse_image_bin_data]
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
@@ -60,8 +58,6 @@ jobs:
           python_output=$(python ${GITHUB_WORKSPACE}/.github/get_compile_command.py src/${{ matrix.tutorial_file_name}}.cpp)
           echo "Python script output: $python_output"
           eval "$python_output"
-
-
 
       - name: Check if ${{ matrix.tutorial_file_name }} exists on Ubuntu 22.04
         if: matrix.os == 'ubuntu-22.04'
@@ -125,8 +121,6 @@ jobs:
           $ENV:GENICAM_FILENAME = "../..//src/arv-fake-camera.xml" 
           ./fake_camera_display
           ./fake_camera_save
-          
-
 
       - name: Build ${{ matrix.tutorial_file_name}} on Windows
         if: ${{ (matrix.os == 'windows-2019') || (matrix.os == 'windows-2022') }}
