--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
       - name:  Memory leak check ${{ matrix.tutorial_file_name}} on Ubuntu 22.04
         if: matrix.os == 'ubuntu-22.04' && matrix.tutorial_file_name == 'tutorial5_parse_gendc_data'
         run: |
-          sudo apt-get update && sudo apt-get install valgrind
+          sudo apt-get update && sudo apt-get install -y  valgrind
           cd  ${GITHUB_WORKSPACE}/test/cpp
           python_output=$(python ${GITHUB_WORKSPACE}/.github/get_compile_command.py src/parse_dummy_gendc_data.cpp
           echo "Python script output: $python_output"
