--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,7 +59,7 @@ jobs:
           eval "$python_output"
 
       - name:  Memory leak check ${{ matrix.tutorial_file_name}} on Ubuntu 22.04
-        if: matrix.os == 'ubuntu-22.04' && (matrix.tutorial_file_name == 'tutorial5_parse_gendc_data' || matrix.tutorial_file_name == 'tutorial5_parse_image_data')
+        if: matrix.os == 'ubuntu-22.04' && startsWith(matrix.tutorial_file_name, 'tutorial5_')
         run: |
           sudo apt-get -y update && sudo apt-get install -y valgrind
           wget https://raw.githubusercontent.com/Sensing-Dev/GenDC/main/test/generated_stub/output.bin
