--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -165,7 +165,9 @@ jobs:
       - name: Run fake camera display
         run: |
           cd test
-          python python/${{ matrix.tutorial_file_name}}
+          cd python
+          ls
+          python ${{ matrix.tutorial_file_name}}
         env: 
-          GENICAM_FILENAME: "."
+          GENICAM_FILENAME: "../"
           
