--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,15 @@ jobs:
           echo "Python script output: $python_output"
           eval "$python_output"
 
+      - name:  Memory leak check ${{ matrix.tutorial_file_name}} on Ubuntu 22.04 with dummy GenDC data
+        if: ${{ (matrix.os == 'ubuntu-22.04') && (matrix.tutorial_file_name == 'tutorial5_parse_gendc_data') }}
+        run: |
+          sudo apt-get -y update && sudo apt-get install -y valgrind
+          cd  ${GITHUB_WORKSPACE}/cpp
+          wget https://raw.githubusercontent.com/Sensing-Dev/GenDC/main/test/generated_stub/output.bin
+          
+          valgrind --leak-check=full ./${{ matrix.tutorial_file_name}} --use-dummy-data
+
       - name: Install sensing-dev SDK on Windows MSVC 2019 & 2022
         if: ${{ (matrix.os == 'windows-2019') || (matrix.os == 'windows-2022') }}
         run: |
@@ -99,30 +108,15 @@ jobs:
         if: matrix.os == 'ubuntu-22.04'
         run: |
           export GENICAM_FILENAME=${GITHUB_WORKSPACE}/test/cpp/src/arv-fake-camera.xml
-          cd  ${GITHUB_WORKSPACE}/test
+          cd  ${GITHUB_WORKSPACE}/test/cpp
 
-          python_output=$(python ${GITHUB_WORKSPACE}/.github/get_compile_command.py cpp/src/${{ matrix.tutorial_file_name}}.cpp)
+          python_output=$(python ${GITHUB_WORKSPACE}/.github/get_compile_command.py src/${{ matrix.tutorial_file_name}}.cpp)
           echo "Python script output: $python_output"
           eval "$python_output"
           ./${{ matrix.tutorial_file_name}}
 
         env: 
           GENICAM_FILENAME: arv-fake-camera.xml
-
-      - name:  Memory leak check ${{ matrix.tutorial_file_name}} on Ubuntu 22.04
-        if: matrix.os == 'ubuntu-22.04' && startsWith(matrix.tutorial_file_name, 'tutorial5_')
-        run: |
-          sudo apt-get -y update && sudo apt-get install -y valgrind
-          cd  ${GITHUB_WORKSPACE}/test
-          wget https://raw.githubusercontent.com/Sensing-Dev/GenDC/main/test/generated_stub/output.bin
-          cp ${GITHUB_WORKSPACE}/test/tutorial_save_image*/* ${GITHUB_WORKSPACE}/test
-          executable=${{ matrix.tutorial_file_name}}
-          executable="${executable/tutorial5_/}_dummy"
-          python_output=$(python ${GITHUB_WORKSPACE}/.github/get_compile_command.py cpp/src/$executable.cpp)
-          echo "Python script output: $python_output"
-          eval "$python_output"
-
-          valgrind --leak-check=full ./$executable --use-dummy-data
 
       - name: Install sensing-dev SDK on Windows MSVC
         if: matrix.os == 'windows-2022'
